welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:3: error: value unary_!_= is not a member of Boolean
  while(!vubiscuit=true){
        ^